--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
