--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
-    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
     "dayjs": "^1.11.10",
+    "docker": "^1.0.0",
+    "mysql2": "^3.6.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -49,7 +52,7 @@
     "@nestjs/testing": "^10.2.6",
     "@types/express": "^4.17.18",
     "@types/jest": "29.5.5",
-    "@types/node": "^20.7.0",
+    "@types/node": "^20.9.0",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.36",
     "@types/supertest": "^2.0.13",
