--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "gen-secret": "node tools/gen-secret.mjs"
   },
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
@@ -30,6 +31,7 @@
     "@nestjs/platform-express": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
+    "argon2": "^0.31.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
@@ -61,6 +63,7 @@
     "jest": "29.7.0",
     "pactum": "^3.5.1",
     "prettier": "^3.0.3",
+    "randomstring": "^1.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "29.1.1",
