--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "alwaysStrict": true,
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
