--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "0.14.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
