--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "gen-secret": "node tools/gen-secret.mjs"
+    "gen-secret": "node tools/gen-secret.mjs",
+    "hash-passwd": "node tools/hash-passwd.mjs"
   },
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
