--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
+    "csv-writer": "^1.6.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
+    "node-cron": "^3.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
