--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,8 @@
   "bracketSpacing": true,
   "tabWidth": 2,
   "endOfLine": "lf",
-  "useTabs": false
+  "useTabs": false,
+  "bracketSameLine": true,
+  "arrowParens": "avoid",
+  "printWidth": 120
 }
